[package]
name = "red-quic"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
bytes = { version = "1" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.8"
serde = { version = "1.0", features = ["derive"] }