[package]
name = "red-quic"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
bytes = { version = "1" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.8"
socket2 = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
#quinn = "0.9.1"
#rustls = { version = "0.20.7", features = ["quic", "dangerous_configuration"], default-features = false }
#rustls-pemfile = "1.0.*"
sha2 = "0.10"
#rcgen ='0.10.0'
s2n-quic = { version="1.12.0", features = ['provider-tls-rustls'] }
parking_lot = "0.12.1"
thiserror="1.0.37"
